Added css to js files

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+    <link href="../src/App" rel="stylesheet">
+    <link href="../src/components/Timeline" rel="stylesheet">
+    <link href="../src/components/TimelineEvent" rel="stylesheet">
     <title>React Timeline</title>
   </head>
   <body>
